--- a/app/src/main/res/layout/activity_add_places.xml
+++ b/app/src/main/res/layout/activity_add_places.xml
@@ -9,26 +9,36 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-
-        <fragment
-            android:id="@+id/list"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            class="edu.umd.cs.cmsc436.location_basedtourguide.AddTour.ListFragment"/>
 
         <fragment
             android:id="@+id/map"
-            android:layout_width="0px"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5"
-            class="edu.umd.cs.cmsc436.location_basedtourguide.AddTour.MapFragment"/>
+            android:layout_weight="2" />
+
+        <RelativeLayout
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="5">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/my_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="0dp" />
+        </RelativeLayout>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
