--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".AddTour.MapFragment">
 
-    <fragment
-        android:id="@+id/map"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
