--- a/app/src/main/res/layout/activity_add_tour.xml
+++ b/app/src/main/res/layout/activity_add_tour.xml
@@ -43,13 +43,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/tour_image" />
 
             <Button
-                android:id="@+id/from_galery"
+                android:id="@+id/from_gallery"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="84dp"
                 android:layout_marginTop="12dp"
                 android:layout_weight="1"
-                android:text="Galery"
+                android:text="Gallery"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tour_image" />
         </LinearLayout>
