--- a/app/src/main/res/layout/activity_tour.xml
+++ b/app/src/main/res/layout/activity_tour.xml
@@ -8,8 +8,8 @@
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/tourMapView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="335dp"
+        android:layout_height="335dp"
         android:layout_centerInParent="true"
         tools:layout_editor_absoluteX="42dp"
         tools:layout_editor_absoluteY="113dp" />
@@ -20,8 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="49dp"
-        android:text="Debugging TextView" />
+        android:layout_marginTop="24dp"
+        android:text="The Place Info Thing Goes Here" />
 
     <Button
         android:id="@+id/testButton"
@@ -30,6 +30,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="26dp"
-        android:text="Directions API TEST" />
+        android:text="Draw Tour (Manually do it for Now)" />
 
 </android.widget.RelativeLayout>
