--- a/app/src/main/res/layout/activity_tour.xml
+++ b/app/src/main/res/layout/activity_tour.xml
@@ -32,4 +32,11 @@
         android:layout_marginBottom="26dp"
         android:text="Draw Tour (Manually do it for Now)" />
 
+    <View
+        android:id="@+id/snackBarView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
+
 </android.widget.RelativeLayout>
