--- a/app/src/main/res/layout/activity_place_info.xml
+++ b/app/src/main/res/layout/activity_place_info.xml
@@ -55,6 +55,13 @@
                 android:layout_width="wrap_content"
                 android:layout_below="@id/place_desc"
                 android:text="Video" />
+            <Button
+                android:id="@+id/audio_button"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_below="@id/place_desc"
+                android:layout_toRightOf="@id/vid_button"
+                android:text="Audio" />
         </RelativeLayout>
 
 
