--- a/app/src/main/res/layout/activity_tour.xml
+++ b/app/src/main/res/layout/activity_tour.xml
@@ -10,18 +10,11 @@
         android:id="@+id/tourMapView"
         android:layout_width="335dp"
         android:layout_height="335dp"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="67dp"
         tools:layout_editor_absoluteX="42dp"
         tools:layout_editor_absoluteY="113dp" />
-
-    <TextView
-        android:id="@+id/testTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:text="The Place Info Thing Goes Here" />
 
     <Button
         android:id="@+id/refreshButton"
@@ -29,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="11dp"
         android:text="Refresh Tour Route" />
 
     <View
@@ -38,5 +31,39 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
+
+    <RelativeLayout
+        android:id="@+id/previewView"
+        android:layout_width="334dp"
+        android:layout_height="79dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp">
+
+        <ImageView
+            android:id="@+id/previewImage"
+            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            app:srcCompat="@color/colorPrimary" />
+
+        <TextView
+            android:id="@+id/previewTitle"
+            android:layout_width="232dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:text="Preview Title"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/previewDescription"
+            android:layout_width="232dp"
+            android:layout_height="57dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:text="TextView" />
+    </RelativeLayout>
 
 </android.widget.RelativeLayout>
