--- a/app/src/main/res/layout/fragment_touritem.xml
+++ b/app/src/main/res/layout/fragment_touritem.xml
@@ -36,7 +36,7 @@
                     android:adjustViewBounds="true"
                     android:cropToPadding="true"
                     android:scaleType="fitXY"
-                    android:src="@drawable/clouds" />
+                    android:src="@drawable/temp_img" />
 
                 <LinearLayout
                     android:layout_width="0dp"
