--- a/app/src/main/res/layout/fragment_comment_item.xml
+++ b/app/src/main/res/layout/fragment_comment_item.xml
@@ -9,8 +9,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp">
 
         <TableLayout
             android:layout_width="match_parent"
@@ -19,24 +19,14 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="7dp"
             android:layout_marginBottom="5dp"
+            android:background="?android:attr/selectableItemBackground"
             android:shrinkColumns="*"
-            android:stretchColumns="*"
-            android:background="?android:attr/selectableItemBackground">
+            android:stretchColumns="*">
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="6"
-                    android:adjustViewBounds="true"
-                    android:cropToPadding="true"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/temp_img" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -46,12 +36,12 @@
                     android:paddingStart="15dp">
 
                     <TextView
-                        android:id="@+id/item_number"
+                        android:id="@+id/author_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingTop="10dp"
-                        android:text="Tour"
-                        android:textAppearance="?attr/textAppearanceListItem" />
+                        android:paddingTop="5dp"
+                        android:text="Author"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
 
                     <TextView
                         android:id="@+id/content"
@@ -59,11 +49,12 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="2"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="20dp"
                         android:scrollHorizontally="true"
-                        android:text="This is the description of a mTour "
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                        android:text="This is a review of a tour."
+                        android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
                 </LinearLayout>
-
             </TableRow>
         </TableLayout>
 
