--- a/app/src/main/res/layout/fragment_place_item.xml
+++ b/app/src/main/res/layout/fragment_place_item.xml
@@ -36,7 +36,7 @@
                     android:adjustViewBounds="true"
                     android:cropToPadding="true"
                     android:scaleType="fitXY"
-                    android:src="@drawable/clouds" />
+                    android:src="@drawable/temp_img" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -46,7 +46,7 @@
                     android:paddingStart="15dp">
 
                     <TextView
-                        android:id="@+id/item_number"
+                        android:id="@+id/place_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingTop="10dp"
