--- a/app/src/main/res/layout/fragment_place_item_list.xml
+++ b/app/src/main/res/layout/fragment_place_item_list.xml
@@ -10,4 +10,4 @@
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".PreviewTour.PreviewLocFragment"
-    tools:listitem="@layout/fragment_item" />
+    tools:listitem="@layout/fragment_place_item" />
