VideoDialog seekbar, however user dragging has been disabled Video, Audio Dialog button displays Play icon on completion instead of || PlaceInfoActivity added Title TextView

--- a/app/src/main/res/layout/fragment_video_dialog.xml
+++ b/app/src/main/res/layout/fragment_video_dialog.xml
@@ -31,4 +31,11 @@
         android:layout_below="@id/videoview"/>
 
 
+    <SeekBar
+        android:id="@+id/video_seekbar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:layout_below="@id/play_pause_vid"/>
+
 </RelativeLayout>
