--- a/app/src/main/res/layout/fragment_tour_contents.xml
+++ b/app/src/main/res/layout/fragment_tour_contents.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="@string/large_text" />
+            android:text="" />
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:map="http://schemas.android.com/apk/res-auto"
