--- a/app/src/main/res/layout/activity_tour.xml
+++ b/app/src/main/res/layout/activity_tour.xml
@@ -8,11 +8,11 @@
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/tourMapView"
-        android:layout_width="365dp"
-        android:layout_height="365dp"
+        android:layout_width="355dp"
+        android:layout_height="355dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp"
+        android:layout_marginBottom="67dp"
         tools:layout_editor_absoluteX="42dp"
         tools:layout_editor_absoluteY="113dp" />
 
@@ -39,7 +39,7 @@
         android:layout_height="96dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="11dp">
+        android:layout_marginTop="28dp">
 
         <TableLayout
             android:layout_width="match_parent"
@@ -99,5 +99,14 @@
         </TableLayout>
 
     </android.support.v7.widget.CardView>
+
+    <TextView
+        android:id="@+id/nextStopText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/previewView"
+        android:layout_alignStart="@+id/previewView"
+        android:layout_marginBottom="-28dp"
+        android:text="Next Stop:" />
 
 </android.widget.RelativeLayout>
